# pokedex

./: CMakeLists.txt  JSONParserCustomLib.h  JSONParserNlohmann.cpp  JSONParserNlohmann.h  JSONParserRapid.cpp  JSONParserRapid.h  README.md  main.cpp
